# pyuzawamg

./: AnnulusShell.h5  AnnulusShell.xdmf  LICENSE  README.md  SphericalShell.h5  SphericalShell.xdmf  demo_stokes.py  main.py  pyproject.toml  requirements.txt  solvers.py  stokes.py
src/pyuzawamg/: prolongation.py  solvers.py  util.py
src/pyuzawamg/demos/: cahn_hilliard.py  stokes.py
